# SharpEdge

./: .gitignore  .readthedocs.yml  CHANGELOG.md  CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  first_things_first.ipynb  frame_image.ipynb  image_framing.ipynb  image_modulation.ipynb  image_pca_compression.ipynb  image_pooling.ipynb  image_reposition.ipynb  image_seam_carving.ipynb  index.md  make.bat  modulate_image.ipynb  pca_compression.ipynb  seam_carving.ipynb  trial.ipynb
src/sharpedge/: Utility.py  __init__.py  frame_image.py  modulate_image.py  pca_compression.py  pooling_image.py  reposition_image.py  sample_input_checker.py  seam_carving.py  sharpedge.py
src/sharpedge/_utils/: utility.py
tests/: display_image.py  load_image.py  test_frame_image.py  test_input_checker.py  test_modulate_image  test_modulate_image.py  test_pca_compression.py  test_pooling_image.py  test_reposition_image.py  test_seam_carving.py  test_sharpedge.py  test_utility.py
